@@ -9,6 +9,7 @@ import ru.yandex.practicum.filmorate.dto.FilmDto;
 import ru.yandex.practicum.filmorate.dto.GenreDto;
 import ru.yandex.practicum.filmorate.dto.RatingDto;
 import ru.yandex.practicum.filmorate.exception.ConstraintViolationException;
+import ru.yandex.practicum.filmorate.exception.InternalServerException;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.mappers.FilmMapper;
 import ru.yandex.practicum.filmorate.mappers.GenreMapper;
@@ -22,7 +23,6 @@ import ru.yandex.practicum.filmorate.storage.user.UserDbStorage;
 import java.time.LocalDate;
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -89,23 +89,19 @@ public class FilmService {
         log.info("Like removed successfully");
     }
 
-    public List<FilmDto> getTopFilms(int count) {
-        log.info("Getting top {} popular films", count);
+    public List<FilmDto> getTopFilms(int count, int genreId, int year) {
+        log.info("Getting top {} popular films with genreId = {} and release year = {}", count, genreId, year);
         if (count <= 0) {
             throw new ValidationException("Count parameter must be positive.");
         }
-        Collection<Film> allFilms = filmStorage.getFilms();
 
-        return allFilms.stream()
+        return filmStorage.getTopFilms(count, genreId, year)
+                .stream()
                 .map(film -> {
                     Set<Long> likes = filmStorage.getLikes(film.getId());
-                    return Map.entry(film, likes.size());
+                    return FilmMapper.mapToFilmDto(film, likes);
                 })
-                .sorted(Map.Entry.<Film, Integer>comparingByValue().reversed())
-                .limit(count)
-                .map(Map.Entry::getKey)
-                .map(film -> FilmMapper.mapToFilmDto(film, filmStorage.getLikes(film.getId())))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Collection<GenreDto> getGenres() {
@@ -134,6 +130,7 @@ public class FilmService {
         return RatingMapper.mapToRatingDto(rating);
     }
 
+
     public List<FilmDto> getCommonFilms(long userId, long friendId) {
         userExists(userId);
         userExists(friendId);
@@ -145,6 +142,20 @@ public class FilmService {
         return films.stream()
                 .map(film -> FilmMapper.mapToFilmDto(film, filmStorage.getLikes(film.getId())))
                 .collect(Collectors.toList());
+
+    @Transactional
+    public void deleteFilm(long filmId) {
+        FilmDto filmDto = getFilmById(filmId);
+        log.info("Deleting film: {}", filmDto);
+
+        boolean isDeleted = filmStorage.deleteFilm(filmId);
+
+        if (isDeleted) {
+            log.info("Film deleted successfully");
+        } else {
+            throw new InternalServerException("Film was not deleted due to internal error.");
+        }
+
     }
 
     private void validateFilm(Film film) {
